# Plugin

./: CMakeLists.txt  README.md  dropbox-ignore-build.ps1  vcpkg-configuration.json  vcpkg.json
Examples/: CMakeLists.txt
Examples/Plugin-with-Entrypoint/: plugin.cpp  secondCpp.cpp  xmake.lua
Examples/Plugin-with-Logging/: Example.Plugin.WithLogging.cpp  SecondFile.cpp  xmake.lua
Examples/PluginDemo/: CMakeLists.txt  plugin.cpp
Examples/VcpkgDemo/: CMakeLists.txt  plugin.cpp  vcpkg-configuration.json  vcpkg.json
Fonts/: Attributiuon.txt
Images/: Attribution.txt  Plugin_Logo.xcf
SkyrimScripting.Plugin/: xmake.lua
SkyrimScripting.Plugin.Entrypoint/: xmake.lua
SkyrimScripting.Plugin.Entrypoint/include/SkyrimScripting/Plugin/: Entrypoint.h
SkyrimScripting.Plugin.Entrypoint/include/SkyrimScripting/Plugin/Entrypoint/: Functions.h  Main.h
SkyrimScripting.Plugin.Entrypoint/include/SkyrimScripting/Plugin/Entrypoint/Internal/: EntrypointCallbacks.h  EntrypointMacros.h  SKSEPlugin_Load.h
SkyrimScripting.Plugin/include/SkyrimScripting/: Plugin.h
SkyrimScripting.Plugin/include/SkyrimScripting/Plugin/: Core.h  Entrypoint.h
include/: Logging.h
include - v1/SkyrimScripting/: Plugin.h
include - v1/SkyrimScripting/Plugin/: Config.h  ConsoleLogging.h
include - v1/SkyrimScripting/Plugin/Internal/: FunctionRunner.h
include/SkyrimScripting/: Plugin.h
include/SkyrimScripting/Plugin/: CallbackEventSink.h  Core.h  EventCallback.h  Init.h  Log.h  LogInitializationMacros.h  Logger.h  PCH.h  Plugin.h  SKSEPlugin.h  SystemEventMacros.h  SystemEvents.h
include/SkyrimScripting/Plugin/Internal/: Macros.h
src/: Plugin.cpp
test/: ExampleSpec.cpp  main.cpp  specHelper.cpp  specHelper.h
